# swift-python

./: CMakeLists.txt  README.md  pyproject.toml  python_add.py
Swift/: Package.swift
Swift/Sources/swift-python/: swift_python.swift
Swift/Tests/swift-pythonTests/: swift_pythonTests.swift
src/: main.cpp
src/swiftedpy/: __init__.py
