[project]
name = "swiftedpy"
description = "Blub"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["build~=1.0", "pytest~=8.0"]

[build-system]
requires = ["pybind11", "scikit-build-core>=0.3.3"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "DEBUG"
wheel.expand-macos-universal-tags = true
